--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                 <div class="collapsible-body center">
                   <span>You can download my full CV here: <br><br>
                     <a 
-                    href="cv/Tanja-Vladisavljević.pdf"
+                    href="cv/Tanja-Vladisavljević-CV.pdf"
                     class="waves-effect waves-light deep-purple btn-large"
                     id="cv">
                     <i class="material-icons medium white-purple-text">cloud_download</i>
